--- a/examples/parallax/style.css
+++ b/examples/parallax/style.css
@@ -1,4 +1,4 @@
-body,ul,li {
+body {
 	padding:0;
 	margin:0;
 	border:0;
@@ -7,7 +7,7 @@ body,ul,li {
 body {
 	font-size:12px;
 	-webkit-user-select:none;
-    -webkit-text-size-adjust:none;
+  -webkit-text-size-adjust:none;
 	font-family:helvetica;
 }
 
@@ -37,18 +37,16 @@ header {
 
 #scroller {
 	position:absolute; z-index:1;
-/*	-webkit-touch-callout:none;*/
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	width:100%;
 	padding:0;
 
-  height: 10000px;
+  height: 2200px;
 }
 
 .rainbow {
   height: 50px;
   width: 100%;
-
   -webkit-transform: translate3d(320px, 0, 0);
 }
 .b1 {
