--- a/examples/parallax/style.css
+++ b/examples/parallax/style.css
@@ -5,7 +5,7 @@ body {
 	font-size:12px;
 	-webkit-user-select:none;
   -webkit-text-size-adjust:none;
-	font-family:helvetica;
+	font-family: helvetica;
 }
 
 header {
@@ -38,7 +38,7 @@ header {
 	width:100%;
 	padding:0;
 
-  height: 3000px;
+  height: 2000px;
 }
 
 .rainbow {
@@ -72,8 +72,10 @@ header {
   margin: 0 auto;
   text-align: center;
   position: absolute;
-  bottom: 0;
-  -webkit-transform: translate3d(0, 0, 0);
+  bottom: 100px;
+  font-size: 18px;
+  font-weight: bold;
+  color: gray;
 }
 
 a { 
