--- a/examples/parallax/style.css
+++ b/examples/parallax/style.css
@@ -67,15 +67,20 @@ header {
   background-color: purple;
 }
 
-.signature { 
+.signature, .guide { 
   width: 100%;
   margin: 0 auto;
   text-align: center;
   position: absolute;
-  bottom: 100px;
   font-size: 16px;
   font-weight: bold;
   color: gray;
+}
+.signature { 
+  bottom: 100px;
+}
+.guide { 
+  top: 100px;
 }
 
 a { 
